# kuma

./: .gitignore  manage.py  pyproject.toml  settings.py  urls.py
.github/workflows/: codacy.yml  codeql.yml  docker.yml  documentation-build.yml  python-lints.yml  veracode.yml
docker/images/kuma_base/: Dockerfile
docs/: requirements.txt
kuma/actioncounters/: fields.py  models.py  tasks.py
kuma/actioncounters/tests/: tests.py
kuma/attachments/: feeds.py  managers.py  models.py  views.py
kuma/attachments/tests/: test_templates.py  test_views.py
kuma/authkeys/: admin.py  models.py
kuma/authkeys/tests/: test_decorators.py  test_views.py
kuma/contentflagging/: forms.py  models.py
kuma/core/: anonymous.py  decorators.py  email_utils.py  fields.py  form_fields.py  helpers.py  jobs.py  managers.py  models.py  sections.py  tasks.py  urlresolvers.py  utils.py  validators.py
kuma/core/tests/: __init__.py  test_helpers.py  test_middleware.py  test_misc.py  test_pagination.py  test_taggit_extras.py
kuma/dashboards/: views.py
kuma/demos/: __init__.py  admin.py  embed.py  feeds.py  forms.py  helpers.py  models.py  views.py
kuma/demos/management/commands/: migrate_demos.py  pull_demos.py
kuma/demos/migrations/: 0002_tech_tag_namespace.py
kuma/demos/tests/: __init__.py  test_models.py  test_views.py
kuma/events/: models.py
kuma/feeder/: models.py
kuma/feeder/management/commands/: update_feeds.py
kuma/humans/: models.py  tests.py
kuma/search/: decorators.py  fields.py  filters.py  models.py  paginator.py  serializers.py  signals.py  tasks.py  utils.py
kuma/search/tests/: __init__.py  test_indexes.py  test_utils.py  test_views.py
kuma/settings/: common.py  test.py  travis.py
kuma/users/: adapters.py  backends.py  forms.py  helpers.py  models.py  urls.py  views.py
kuma/users/providers/github/: provider.py
kuma/users/providers/persona/: views.py
kuma/users/tests/: __init__.py  test_forms.py  test_helpers.py  test_views.py
kuma/wiki/: admin.py  badges.py  constants.py  content.py  events.py  feeds.py  forms.py  helpers.py  jobs.py  kumascript.py  managers.py  middleware.py  models.py  queries.py  search.py  tasks.py  utils.py  views.py
kuma/wiki/management/commands/: render_document.py  repair_translation_breadcrumbs.py
kuma/wiki/tests/: __init__.py  test_content.py  test_feeds.py  test_kumascript.py  test_middleware.py  test_models.py  test_tasks.py  test_templates.py  test_views.py
requirements/: compiled.txt  dev.txt  prod.txt
scripts/: anonymize.py  chief_deploy.py  update_site.py
