[tool.poetry]
name = "kuma"
version = "0.0.0"
license = "MPL-2.0"
description = "The MDN Web Docs site"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
homepage = "https://developer.mozilla.org"
repository = "https://github.com/mdn/kuma"
documentation = "https://kuma.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.10"

celery = "^5.4.0"
dj-database-url = "^2.1.0"
dj-email-url = "^1"
django = "^5"
django-decorator-include = "^3.0"
django-extensions = "^3.2.3"
django-ratelimit = "4.1.0"
django-redis = "^5.4.0" # (Django cache backend)
elasticsearch = "^7.17.9"
elasticsearch-dsl = "^7.4.1"
gunicorn = "^22.0.0"
newrelic = "9.10.0"
python-decouple = "^3.8"
pytz = "^2023.3"
redo = "^2.0.4"
requests = "^2.32.2"
urlwait = "^1.0"
gevent = {extras = ["gevent"], version = "^23.9.1"}
psycopg2-binary = "^2.9.9"
sentry-sdk = "^2.11.0"
whitenoise = "^6.6.0"
mozilla-django-oidc = "^4.0.1"
django-ninja = "^1.1.0"

[tool.poetry.dev-dependencies]
# Development Tools
werkzeug = "^3.0" # Enables runserver_plus from django-extensions

# Testing
braceexpand = "^0.1.7"
pytest = "~7.4"
pytest-base-url = "^2.0.0"
pytest-cov = "~5.0.0"
pytest-django = "~4.8.0"
pytest-metadata = "^3.1.1"
pytest-rerunfailures = "^14.0"
requests-mock = "^1.11.0"

ElasticMock = "^1.8.0"

# Linting
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
dennis = "^1.1" # Used by `make localetest` to lint po files
isort = "^5.13.2"

# Pinned Dependencies
coverage = {extras = ["toml"], version = "^7"} # Use optional toml support
pytest-watch = "^4.2.0"
honcho = "^1.0.1"
ipdb = "^0.13.13"
ipython = "^8.25.0"
model-bakery = "^1.18.1"

[tool.black]
target-version = ["py38"]

[tool.coverage.run]
source = ["kuma"]
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
omit = ["*migrations*", "*/management/commands/*"]

[tool.coverage.html]
show_contexts = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
